// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validation should enable validation after click on toogle 1`] = `
<div class="form-group lfr-ddm-form-field-validation">
  <div class="form-group">
    <label class="ddm-toggle-switch toggle-switch">
      <input class="toggle-switch-check" type="checkbox">
      <span aria-hidden="true" class="toggle-switch-bar">
        <span class="toggle-switch-handle"></span>
        <span class="toggle-switch-text toggle-switch-text-right">Validator</span>
      </span>
    </label>
  </div>
  <div class="form-group" style="display: none;">
    <label>if-input </label>
    <div class="form-builder-select-field input-group-container">
      <div class="form-control select-field-trigger">
        <div class="option-selected option-selected-placeholder">choose-an-option</div>
        <a class="select-arrow-down-container" href="javascript:;">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-caret-double" focusable="false">
            <title>caret-double</title>
            <use xlink:href="icons.svg#caret-double"></use>
          </svg>
        </a>
      </div>
    </div>
    <div class="dropdown-menu">
      <ul class="list-unstyled">
        <li class="dropdown-item" data-option-value="">choose-an-option</li>
        <li class="dropdown-item" data-option-value="notContains">contains</li>
        <li class="dropdown-item" data-option-value="contains">does-not-contain</li>
        <li class="dropdown-item" data-option-value="url">is-not-url</li>
        <li class="dropdown-item" data-option-value="email">is-not-email</li>
        <li class="dropdown-item" data-option-value="regularExpression">does-not-match</li>
      </ul>
    </div>
  </div>
  <div class="form-group" style="display: none;">
    <label>show-error-message
      <span class="reference-mark">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-asterisk" focusable="false">
          <title>asterisk</title>
          <use xlink:href="icons.svg#asterisk"></use>
        </svg>
      </span>
    </label>
    <input class="form-control" name="validation_errorMessage" placeholder="show-error-message" type="text" value="">
  </div>
</div>
`;

exports[`Validation should not render parameter field if validation is isEmailAddress 1`] = `
<div class="form-group lfr-ddm-form-field-validation">
  <div class="form-group">
    <label class="ddm-toggle-switch toggle-switch">
      <input checked="" class="toggle-switch-check" type="checkbox">
      <span aria-hidden="true" class="toggle-switch-bar">
        <span class="toggle-switch-handle"></span>
        <span class="toggle-switch-text toggle-switch-text-right">Validator</span>
      </span>
    </label>
  </div>
  <div class="form-group">
    <label>if-input </label>
    <div class="form-builder-select-field input-group-container">
      <div class="form-control select-field-trigger">
        <div class="option-selected option-selected-placeholder">is-not-email</div>
        <a class="select-arrow-down-container" href="javascript:;">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-caret-double" focusable="false">
            <title>caret-double</title>
            <use xlink:href="icons.svg#caret-double"></use>
          </svg>
        </a>
      </div>
    </div>
    <div class="dropdown-menu">
      <ul class="list-unstyled">
        <li class="dropdown-item" data-option-value="">choose-an-option</li>
        <li class="dropdown-item" data-option-value="notContains">contains</li>
        <li class="dropdown-item" data-option-value="contains">does-not-contain</li>
        <li class="dropdown-item" data-option-value="url">is-not-url</li>
        <li class="dropdown-item" data-option-value="email">is-not-email</li>
        <li class="dropdown-item" data-option-value="regularExpression">does-not-match</li>
      </ul>
    </div>
  </div>
  <div class="form-group">
    <label>show-error-message
      <span class="reference-mark">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-asterisk" focusable="false">
          <title>asterisk</title>
          <use xlink:href="icons.svg#asterisk"></use>
        </svg>
      </span>
    </label>
    <input class="form-control" name="validation_errorMessage" placeholder="show-error-message" type="text" value="">
  </div>
</div>
`;

exports[`Validation should not render parameter field if validation is isUrl 1`] = `
<div class="form-group lfr-ddm-form-field-validation">
  <div class="form-group">
    <label class="ddm-toggle-switch toggle-switch">
      <input checked="" class="toggle-switch-check" type="checkbox">
      <span aria-hidden="true" class="toggle-switch-bar">
        <span class="toggle-switch-handle"></span>
        <span class="toggle-switch-text toggle-switch-text-right">Validator</span>
      </span>
    </label>
  </div>
  <div class="form-group">
    <label>if-input </label>
    <div class="form-builder-select-field input-group-container">
      <div class="form-control select-field-trigger">
        <div class="option-selected option-selected-placeholder">is-not-url</div>
        <a class="select-arrow-down-container" href="javascript:;">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-caret-double" focusable="false">
            <title>caret-double</title>
            <use xlink:href="icons.svg#caret-double"></use>
          </svg>
        </a>
      </div>
    </div>
    <div class="dropdown-menu">
      <ul class="list-unstyled">
        <li class="dropdown-item" data-option-value="">choose-an-option</li>
        <li class="dropdown-item" data-option-value="notContains">contains</li>
        <li class="dropdown-item" data-option-value="contains">does-not-contain</li>
        <li class="dropdown-item" data-option-value="url">is-not-url</li>
        <li class="dropdown-item" data-option-value="email">is-not-email</li>
        <li class="dropdown-item" data-option-value="regularExpression">does-not-match</li>
      </ul>
    </div>
  </div>
  <div class="form-group">
    <label>show-error-message
      <span class="reference-mark">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-asterisk" focusable="false">
          <title>asterisk</title>
          <use xlink:href="icons.svg#asterisk"></use>
        </svg>
      </span>
    </label>
    <input class="form-control" name="validation_errorMessage" placeholder="show-error-message" type="text" value="">
  </div>
</div>
`;

exports[`Validation should render checkbox to enable Validation 1`] = `
<div class="form-group lfr-ddm-form-field-validation">
  <div class="form-group">
    <label class="ddm-toggle-switch toggle-switch">
      <input class="toggle-switch-check" type="checkbox">
      <span aria-hidden="true" class="toggle-switch-bar">
        <span class="toggle-switch-handle"></span>
        <span class="toggle-switch-text toggle-switch-text-right">Validator</span>
      </span>
    </label>
  </div>
  <div class="form-group" style="display: none;">
    <label>if-input </label>
    <div class="form-builder-select-field input-group-container">
      <div class="form-control select-field-trigger">
        <div class="option-selected option-selected-placeholder">choose-an-option</div>
        <a class="select-arrow-down-container" href="javascript:;">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-caret-double" focusable="false">
            <title>caret-double</title>
            <use xlink:href="icons.svg#caret-double"></use>
          </svg>
        </a>
      </div>
    </div>
    <div class="dropdown-menu">
      <ul class="list-unstyled">
        <li class="dropdown-item" data-option-value="">choose-an-option</li>
        <li class="dropdown-item" data-option-value="notContains">contains</li>
        <li class="dropdown-item" data-option-value="contains">does-not-contain</li>
        <li class="dropdown-item" data-option-value="url">is-not-url</li>
        <li class="dropdown-item" data-option-value="email">is-not-email</li>
        <li class="dropdown-item" data-option-value="regularExpression">does-not-match</li>
      </ul>
    </div>
  </div>
  <div class="form-group" style="display: none;">
    <label>show-error-message
      <span class="reference-mark">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-asterisk" focusable="false">
          <title>asterisk</title>
          <use xlink:href="icons.svg#asterisk"></use>
        </svg>
      </span>
    </label>
    <input class="form-control" name="validation_errorMessage" placeholder="show-error-message" type="text" value="">
  </div>
</div>
`;

exports[`Validation should render filled fields when value is filled 1`] = `
<div class="form-group lfr-ddm-form-field-validation">
  <div class="form-group">
    <label class="ddm-toggle-switch toggle-switch">
      <input checked="" class="toggle-switch-check" type="checkbox">
      <span aria-hidden="true" class="toggle-switch-bar">
        <span class="toggle-switch-handle"></span>
        <span class="toggle-switch-text toggle-switch-text-right">Validator</span>
      </span>
    </label>
  </div>
  <div class="form-group">
    <label>if-input </label>
    <div class="form-builder-select-field input-group-container">
      <div class="form-control select-field-trigger">
        <div class="option-selected option-selected-placeholder">contains</div>
        <a class="select-arrow-down-container" href="javascript:;">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-caret-double" focusable="false">
            <title>caret-double</title>
            <use xlink:href="icons.svg#caret-double"></use>
          </svg>
        </a>
      </div>
    </div>
    <div class="dropdown-menu">
      <ul class="list-unstyled">
        <li class="dropdown-item" data-option-value="">choose-an-option</li>
        <li class="dropdown-item" data-option-value="notContains">contains</li>
        <li class="dropdown-item" data-option-value="contains">does-not-contain</li>
        <li class="dropdown-item" data-option-value="url">is-not-url</li>
        <li class="dropdown-item" data-option-value="email">is-not-email</li>
        <li class="dropdown-item" data-option-value="regularExpression">does-not-match</li>
      </ul>
    </div>
  </div>
  <div class="form-group">
    <label>the-value
      <span class="reference-mark">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-asterisk" focusable="false">
          <title>asterisk</title>
          <use xlink:href="icons.svg#asterisk"></use>
        </svg>
      </span>
    </label>
    <input class="form-control" name="validation_parameterMessage" placeholder="text" type="text" value="forbiddenWord">
  </div>
  <div class="form-group">
    <label>show-error-message
      <span class="reference-mark">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-asterisk" focusable="false">
          <title>asterisk</title>
          <use xlink:href="icons.svg#asterisk"></use>
        </svg>
      </span>
    </label>
    <input class="form-control" name="validation_errorMessage" placeholder="show-error-message" type="text" value="Error message">
  </div>
</div>
`;

exports[`Validation should render parameter field with Numeric element 1`] = `
<div class="form-group lfr-ddm-form-field-validation">
  <div class="form-group">
    <label class="ddm-toggle-switch toggle-switch">
      <input checked="" class="toggle-switch-check" type="checkbox">
      <span aria-hidden="true" class="toggle-switch-bar">
        <span class="toggle-switch-handle"></span>
        <span class="toggle-switch-text toggle-switch-text-right">Validator</span>
      </span>
    </label>
  </div>
  <div class="form-group">
    <label>if-input </label>
    <div class="form-builder-select-field input-group-container">
      <div class="form-control select-field-trigger">
        <div class="option-selected option-selected-placeholder">is-greater-than-or-equal-to</div>
        <a class="select-arrow-down-container" href="javascript:;">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-caret-double" focusable="false">
            <title>caret-double</title>
            <use xlink:href="icons.svg#caret-double"></use>
          </svg>
        </a>
      </div>
    </div>
    <div class="dropdown-menu">
      <ul class="list-unstyled">
        <li class="dropdown-item" data-option-value="">choose-an-option</li>
        <li class="dropdown-item" data-option-value="lt">is-greater-than-or-equal-to</li>
        <li class="dropdown-item" data-option-value="lteq">is-greater-than</li>
        <li class="dropdown-item" data-option-value="eq">is-not-equal-to</li>
        <li class="dropdown-item" data-option-value="gt">is-less-than-or-equal-to</li>
        <li class="dropdown-item" data-option-value="gteq">is-less-than</li>
      </ul>
    </div>
  </div>
  <div class="form-group">
    <label>show-error-message
      <span class="reference-mark">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-asterisk" focusable="false">
          <title>asterisk</title>
          <use xlink:href="icons.svg#asterisk"></use>
        </svg>
      </span>
    </label>
    <input class="form-control" name="validation_errorMessage" placeholder="show-error-message" type="text" value="">
  </div>
</div>
`;

exports[`Validation should render parameter field with Text element and then with Numeric after update dataType 1`] = `
<div class="form-group lfr-ddm-form-field-validation">
  <div class="form-group">
    <label class="ddm-toggle-switch toggle-switch">
      <input checked="" class="toggle-switch-check" type="checkbox">
      <span aria-hidden="true" class="toggle-switch-bar">
        <span class="toggle-switch-handle"></span>
        <span class="toggle-switch-text toggle-switch-text-right">Validator</span>
      </span>
    </label>
  </div>
  <div class="form-group">
    <label>if-input </label>
    <div class="form-builder-select-field input-group-container">
      <div class="form-control select-field-trigger">
        <div class="option-selected option-selected-placeholder">contains</div>
        <a class="select-arrow-down-container" href="javascript:;">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-caret-double" focusable="false">
            <title>caret-double</title>
            <use xlink:href="icons.svg#caret-double"></use>
          </svg>
        </a>
      </div>
    </div>
    <div class="dropdown-menu">
      <ul class="list-unstyled">
        <li class="dropdown-item" data-option-value="">choose-an-option</li>
        <li class="dropdown-item" data-option-value="notContains">contains</li>
        <li class="dropdown-item" data-option-value="contains">does-not-contain</li>
        <li class="dropdown-item" data-option-value="url">is-not-url</li>
        <li class="dropdown-item" data-option-value="email">is-not-email</li>
        <li class="dropdown-item" data-option-value="regularExpression">does-not-match</li>
      </ul>
    </div>
  </div>
  <div class="form-group">
    <label>show-error-message
      <span class="reference-mark">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-asterisk" focusable="false">
          <title>asterisk</title>
          <use xlink:href="icons.svg#asterisk"></use>
        </svg>
      </span>
    </label>
    <input class="form-control" name="validation_errorMessage" placeholder="show-error-message" type="text" value="">
  </div>
</div>
`;

exports[`Validation should render parameter field with Text element and then with Numeric after update dataType 2`] = `
<div class="form-group lfr-ddm-form-field-validation">
  <div class="form-group">
    <label class="ddm-toggle-switch toggle-switch">
      <input checked="" class="toggle-switch-check" type="checkbox">
      <span aria-hidden="true" class="toggle-switch-bar">
        <span class="toggle-switch-handle"></span>
        <span class="toggle-switch-text toggle-switch-text-right">Validator</span>
      </span>
    </label>
  </div>
  <div class="form-group">
    <label>if-input </label>
    <div class="form-builder-select-field input-group-container">
      <div class="form-control select-field-trigger">
        <div class="option-selected option-selected-placeholder">is-greater-than-or-equal-to</div>
        <a class="select-arrow-down-container" href="javascript:;">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-caret-double" focusable="false">
            <title>caret-double</title>
            <use xlink:href="icons.svg#caret-double"></use>
          </svg>
        </a>
      </div>
    </div>
    <div class="dropdown-menu">
      <ul class="list-unstyled">
        <li class="dropdown-item" data-option-value="">choose-an-option</li>
        <li class="dropdown-item" data-option-value="lt">is-greater-than-or-equal-to</li>
        <li class="dropdown-item" data-option-value="lteq">is-greater-than</li>
        <li class="dropdown-item" data-option-value="eq">is-not-equal-to</li>
        <li class="dropdown-item" data-option-value="gt">is-less-than-or-equal-to</li>
        <li class="dropdown-item" data-option-value="gteq">is-less-than</li>
      </ul>
    </div>
  </div>
  <div class="form-group">
    <label>show-error-message
      <span class="reference-mark">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-asterisk" focusable="false">
          <title>asterisk</title>
          <use xlink:href="icons.svg#asterisk"></use>
        </svg>
      </span>
    </label>
    <input class="form-control" name="validation_errorMessage" placeholder="show-error-message" type="text" value="">
  </div>
</div>
`;

exports[`Validation should render parameter field with TextField element 1`] = `
<div class="form-group lfr-ddm-form-field-validation">
  <div class="form-group">
    <label class="ddm-toggle-switch toggle-switch">
      <input checked="" class="toggle-switch-check" type="checkbox">
      <span aria-hidden="true" class="toggle-switch-bar">
        <span class="toggle-switch-handle"></span>
        <span class="toggle-switch-text toggle-switch-text-right">Validator</span>
      </span>
    </label>
  </div>
  <div class="form-group">
    <label>if-input </label>
    <div class="form-builder-select-field input-group-container">
      <div class="form-control select-field-trigger">
        <div class="option-selected option-selected-placeholder">contains</div>
        <a class="select-arrow-down-container" href="javascript:;">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-caret-double" focusable="false">
            <title>caret-double</title>
            <use xlink:href="icons.svg#caret-double"></use>
          </svg>
        </a>
      </div>
    </div>
    <div class="dropdown-menu">
      <ul class="list-unstyled">
        <li class="dropdown-item" data-option-value="">choose-an-option</li>
        <li class="dropdown-item" data-option-value="notContains">contains</li>
        <li class="dropdown-item" data-option-value="contains">does-not-contain</li>
        <li class="dropdown-item" data-option-value="url">is-not-url</li>
        <li class="dropdown-item" data-option-value="email">is-not-email</li>
        <li class="dropdown-item" data-option-value="regularExpression">does-not-match</li>
      </ul>
    </div>
  </div>
  <div class="form-group">
    <label>show-error-message
      <span class="reference-mark">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-asterisk" focusable="false">
          <title>asterisk</title>
          <use xlink:href="icons.svg#asterisk"></use>
        </svg>
      </span>
    </label>
    <input class="form-control" name="validation_errorMessage" placeholder="show-error-message" type="text" value="">
  </div>
</div>
`;

exports[`Validation should update error message and emit a field edited event 1`] = `
<div class="form-group lfr-ddm-form-field-validation">
  <div class="form-group">
    <label class="ddm-toggle-switch toggle-switch">
      <input checked="" class="toggle-switch-check" type="checkbox">
      <span aria-hidden="true" class="toggle-switch-bar">
        <span class="toggle-switch-handle"></span>
        <span class="toggle-switch-text toggle-switch-text-right">Validator</span>
      </span>
    </label>
  </div>
  <div class="form-group">
    <label>if-input </label>
    <div class="form-builder-select-field input-group-container">
      <div class="form-control select-field-trigger">
        <div class="option-selected option-selected-placeholder">contains</div>
        <a class="select-arrow-down-container" href="javascript:;">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-caret-double" focusable="false">
            <title>caret-double</title>
            <use xlink:href="icons.svg#caret-double"></use>
          </svg>
        </a>
      </div>
    </div>
    <div class="dropdown-menu">
      <ul class="list-unstyled">
        <li class="dropdown-item" data-option-value="">choose-an-option</li>
        <li class="dropdown-item" data-option-value="notContains">contains</li>
        <li class="dropdown-item" data-option-value="contains">does-not-contain</li>
        <li class="dropdown-item" data-option-value="url">is-not-url</li>
        <li class="dropdown-item" data-option-value="email">is-not-email</li>
        <li class="dropdown-item" data-option-value="regularExpression">does-not-match</li>
      </ul>
    </div>
  </div>
  <div class="form-group">
    <label>the-value
      <span class="reference-mark">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-asterisk" focusable="false">
          <title>asterisk</title>
          <use xlink:href="icons.svg#asterisk"></use>
        </svg>
      </span>
    </label>
    <input class="form-control" name="validation_parameterMessage" placeholder="text" type="text" value="forbiddenWord">
  </div>
  <div class="form-group">
    <label>show-error-message
      <span class="reference-mark">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-asterisk" focusable="false">
          <title>asterisk</title>
          <use xlink:href="icons.svg#asterisk"></use>
        </svg>
      </span>
    </label>
    <input class="form-control" name="validation_errorMessage" placeholder="show-error-message" type="text" value="new Error Message">
  </div>
</div>
`;

exports[`Validation should update parameter message and emit a field edited event 1`] = `
<div class="form-group lfr-ddm-form-field-validation">
  <div class="form-group">
    <label class="ddm-toggle-switch toggle-switch">
      <input checked="" class="toggle-switch-check" type="checkbox">
      <span aria-hidden="true" class="toggle-switch-bar">
        <span class="toggle-switch-handle"></span>
        <span class="toggle-switch-text toggle-switch-text-right">Validator</span>
      </span>
    </label>
  </div>
  <div class="form-group">
    <label>if-input </label>
    <div class="form-builder-select-field input-group-container">
      <div class="form-control select-field-trigger">
        <div class="option-selected option-selected-placeholder">contains</div>
        <a class="select-arrow-down-container" href="javascript:;">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-caret-double" focusable="false">
            <title>caret-double</title>
            <use xlink:href="icons.svg#caret-double"></use>
          </svg>
        </a>
      </div>
    </div>
    <div class="dropdown-menu">
      <ul class="list-unstyled">
        <li class="dropdown-item" data-option-value="">choose-an-option</li>
        <li class="dropdown-item" data-option-value="notContains">contains</li>
        <li class="dropdown-item" data-option-value="contains">does-not-contain</li>
        <li class="dropdown-item" data-option-value="url">is-not-url</li>
        <li class="dropdown-item" data-option-value="email">is-not-email</li>
        <li class="dropdown-item" data-option-value="regularExpression">does-not-match</li>
      </ul>
    </div>
  </div>
  <div class="form-group">
    <label>the-value
      <span class="reference-mark">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-asterisk" focusable="false">
          <title>asterisk</title>
          <use xlink:href="icons.svg#asterisk"></use>
        </svg>
      </span>
    </label>
    <input class="form-control" name="validation_parameterMessage" placeholder="text" type="text" value="new Parameter Message">
  </div>
  <div class="form-group">
    <label>show-error-message
      <span class="reference-mark">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-asterisk" focusable="false">
          <title>asterisk</title>
          <use xlink:href="icons.svg#asterisk"></use>
        </svg>
      </span>
    </label>
    <input class="form-control" name="validation_errorMessage" placeholder="show-error-message" type="text" value="Error message">
  </div>
</div>
`;
